<resources>
    <string name="app_name">NoteHub</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_login">Lets Login</string>
    <string name="subtitle_login">And notes your idea</string>
    <string name="password_login">Password</string>
    <string name="email_login">Email Address</string>
    <string name="placeholder_email_login">Example: johndoe@gmail.com</string>
    <string name="forgot_password_login">Forgot Password</string>
    <string name="text_button_login">Login</string>
</resources>