<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".ui.auth.LoginFragment">

    <TextView
        android:id="@+id/title"
        style="@style/xl_2_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="16dp"
        android:text="@string/title_login"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/base_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/subtitle_login"
        android:textColor="@color/dark_gray" />

    <TextView
        android:id="@+id/email"
        style="@style/base_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_login"
        android:textColor="@color/black" />

    <EditText
        style="@style/base_regular"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/placeholder_email_login"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <TextView
        android:id="@+id/password"
        style="@style/base_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_login"
        android:textColor="@color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:hint="*******"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp" />

    <TextView
        android:id="@+id/ForgotPassword"
        style="@style/xs_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password_login"
        android:textColor="@color/primary_base" />

    <Button
        style="@style/base_medium"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:hint="@string/text_button_login"
        android:text="@string/text_button_login"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/primary_base" />

        <TextView
            android:id="@+id/or"
            style="@style/xs_2_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="OR"
            android:textColor="@color/dark_gray" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/primary_base" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        style="@style/base_medium"
        android:background="@drawable/shape"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:hint="@string/text_button_login"
        android:text="@string/text_button_login"
        android:textColor="@color/black" />


</LinearLayout>